fixed alignment issue cause by rails 'button_to' help

--- a/app/assets/stylesheets/_tables.css.scss
+++ b/app/assets/stylesheets/_tables.css.scss
@@ -66,3 +66,7 @@ table {
     }
   }
 }
+.button_to,
+.button_to div {
+  display: inline;
+}
